<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleUnits"
        android:layout_width="330dp"
        android:layout_height="24dp"
        android:layout_marginBottom="88dp"
        android:fontFamily="sans-serif"
        android:text="@string/title_units"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <Spinner
        android:id="@+id/spinnerUnitFrom"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleUnits"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinnerUnitTo"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toEndOf="@+id/spinnerUnitFrom"
        app:layout_constraintTop_toBottomOf="@+id/titleUnits"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/enterValue"
        android:layout_width="330dp"
        android:layout_height="24dp"
        android:layout_marginBottom="88dp"
        android:text="@string/enter_value"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.828" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="inserte valor a convertir"
        android:ems="10"
        android:hint="min 1"
        android:inputType="number"
        android:labelFor="@+id/enterValue"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterValue" />

    <TextView
        android:id="@+id/titleValue"
        android:layout_width="330dp"
        android:layout_height="24dp"
        android:layout_marginBottom="84dp"
        android:text="@string/title_value"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/viewTextResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="valor convertido"
        android:textAlignment="center"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleValue"
        app:layout_constraintVertical_bias="0.821" />

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="190dp"
        android:layout_height="73dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="61dp"
        android:text="@string/button_convert"
        app:layout_constraintEnd_toStartOf="@+id/buttonInvert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/buttonInvert"
        android:layout_width="89dp"
        android:layout_height="73dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="28dp"
        android:text="@string/button_invert"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.726"
        app:layout_constraintStart_toEndOf="@+id/buttonConvert"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

</androidx.constraintlayout.widget.ConstraintLayout>